Modernize orchestration engine supply chain